--- a/mobile-solution/xamarinrest/xamarinrest/Views/ItemsPage.xaml
+++ b/mobile-solution/xamarinrest/xamarinrest/Views/ItemsPage.xaml
@@ -24,18 +24,24 @@
                  IsRefreshing="{Binding IsBusy, Mode=OneWay}"
                  CachingStrategy="RecycleElement"
                  ItemSelected="OnItemSelected">
+                
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <StackLayout Padding="10">
-                                <Label Text="{Binding Text}" 
-                       LineBreakMode="NoWrap" 
-                       Style="{DynamicResource ListItemTextStyle}" 
-                       FontSize="16" />
-                                <Label Text="{Binding Description}" 
-                       LineBreakMode="NoWrap"
-                       Style="{DynamicResource ListItemDetailTextStyle}"
-                       FontSize="13" />
+                                <Label Text="Id:" 
+                                    LineBreakMode="NoWrap"
+                                    FontSize="12" />
+                                <Label Text="{Binding Id}" 
+                                    LineBreakMode="NoWrap"
+                                    FontSize="12" />
+
+                                <Label Text="Nome:" 
+                                    LineBreakMode="NoWrap"
+                                    FontSize="12" />
+                                <Label Text="{Binding Nome}" 
+                                    LineBreakMode="NoWrap"
+                                    FontSize="16" />
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
