--- a/mobile-solution/xamarinrest/xamarinrest/Views/MainPage.xaml
+++ b/mobile-solution/xamarinrest/xamarinrest/Views/MainPage.xaml
@@ -4,7 +4,7 @@
             xmlns:views="clr-namespace:xamarinrest.Views"
             x:Class="xamarinrest.Views.MainPage">
     <TabbedPage.Children>
-        <NavigationPage Title="Browse">
+        <NavigationPage Title="Pessoas">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_feed.png"/>
@@ -15,7 +15,7 @@
             </x:Arguments>
         </NavigationPage>
         
-        <NavigationPage Title="About">
+        <NavigationPage Title="Empresas">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_about.png"/>
